--- a/communication-log/index.html
+++ b/communication-log/index.html
@@ -1,5 +1,9 @@
 <html>
-<body>
-   <p>Radio check. Pilot, please confirm.</p>
-</body>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
+   <body>
+      <p>Radio check. Pilot, please confirm.</p>
+      ... your content here
+   </body>
 </html>
