--- a/communication-log/index.html
+++ b/communication-log/index.html
@@ -3,3 +3,4 @@
    <p>Radio check. Pilot, please confirm.</p>
 </body>
 </html>
+<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
