--- a/communication-log/index.html
+++ b/communication-log/index.html
@@ -1,17 +1,7 @@
 <html>
-<<<<<<< HEAD
 <body>
    <p>Radio check. Pilot, please confirm.</p>
+   <img href = "https://user-images.githubusercontent.com/67616760/89227756-dc433900-d5a3-11ea-9fee-9061c2af76fb.jpg">
 </body>
 </html>
 <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-=======
-   <head>
-      <link rel="stylesheet" type="text/css" href="style.css">
-   </head>
-   <body>
-      <p>Radio check. Pilot, please confirm.</p>
-      ... your content here
-   </body>
-</html>
->>>>>>> dd7c67f47c612923b5f1bef9cb7677410c5e2551
