--- a/communication-log/index.html
+++ b/communication-log/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
    <p>Radio check.</p>
-   <img href = "https://user-images.githubusercontent.com/67616760/89227756-dc433900-d5a3-11ea-9fee-9061c2af76fb.jpg"/>
+   <img src = "https://user-images.githubusercontent.com/67616760/89227756-dc433900-d5a3-11ea-9fee-9061c2af76fb.jpg"/>
 </body>
 </html>
 
